--- a/css/style.css
+++ b/css/style.css
@@ -11328,3 +11328,49 @@
 	color:var(--white-color);
 	background-color:var(--main-color);
 }
+
+@media (max-width: 767.98px) {
+	.back-top {
+			bottom: 30px;
+			left: 15px;
+			width: 30px;
+			height: 30px;
+			line-height: 30px;
+	}
+	.back-top i {
+			font-size: 3rem;
+	}
+}
+
+.back-top i {
+	font-size: 3.5rem;
+	vertical-align: middle;
+}
+
+.fab, .far {
+	font-weight: 400;
+}
+
+.fab {
+	font-family: "Font Awesome 5 Brands";
+}
+
+.fa-fw {
+	text-align: center;
+	width: 1.25em;
+}
+
+.fa, .fab, .fad, .fal, .far, .fas {
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	display: inline-block;
+	font-style: normal;
+	font-variant: normal;
+	text-rendering: auto;
+	line-height: 1;
+}
+
+*, *::before, *::after {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
